--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,9 @@
 name: Generate Datas
 on:
-  schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
+  schedule:
+    - cron: "0 */12 * * *" # every 12 hours
   workflow_dispatch:
+
 jobs:
   build:
     name: Jobs to update datas
@@ -11,9 +12,10 @@ jobs:
       # Snake Animation
       - uses: Platane/snk@master
         id: snake-gif
-with:
+        with:
           github_user_name: sagarbanik
           svg_out_path: dist/github-contribution-grid-snake.svg
+
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
